--- a/config/database.yml
+++ b/config/database.yml
@@ -25,4 +25,8 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
+  database: kadai_84mw
+  username: kadai_84mw_user
+  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
   #database: storage/production.sqlite3
